Testing some functionalities

--- a/Platforms/HoloLens/Config/HoloLensEngine.ini
+++ b/Platforms/HoloLens/Config/HoloLensEngine.ini
@@ -18,7 +18,7 @@ MinimumPlatformVersion=
 MaximumPlatformVersionTested=10.0.18362.0
 MaxTrianglesPerCubicMeter=500.000000
 SpatialMeshingVolumeSize=20.000000
-CompilerVersion=Default
+CompilerVersion=VisualStudio2022
 Windows10SDKVersion=10.0.18362.0
 +CapabilityList=internetClientServer
 +CapabilityList=privateNetworkClientServer
