--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Developers/pc/Collections/AhmedSameh/Maps/AhmedSameh.AhmedSameh
+GameDefaultMap=/Game/BackToBack/Maps/TestPreCommit.TestPreCommit
 GlobalDefaultGameMode=/Game/Developers/pc/Collections/AhmedSameh/Blueprints/BP_BTBGameModeBase.BP_BTBGameModeBase_C
 bUseSplitscreen=False
-EditorStartupMap=/Game/Developers/pc/Collections/AhmedSameh/Maps/AhmedSameh.AhmedSameh
+EditorStartupMap=/Game/BackToBack/Maps/TestPreCommit.TestPreCommit
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
