Revert "Merge branch 'dev' of https://github.com/bassel97/di-tri-Back-To-Back into dev"
This reverts commit e4b9bde5723cc75f74b48d6d906b963e1200a236, reversing
changes made to 269f06036d62637b9e5c7c133a077a087ea738ea.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/BackToBack/Maps/TestPreCommit.TestPreCommit
-GlobalDefaultGameMode=/Game/Developers/pc/Collections/AhmedSameh/Blueprints/BP_BTBGameplayGameMode.BP_BTBGameplayGameMode_C
+GlobalDefaultGameMode=/Game/Developers/pc/Collections/AhmedSameh/Blueprints/BP_BTBGameModeBase.BP_BTBGameModeBase_C
 bUseSplitscreen=False
 EditorStartupMap=/Game/BackToBack/Maps/TestPreCommit.TestPreCommit
 
@@ -204,6 +204,3 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
-
-[CoreRedirects]
-+PropertyRedirects=(OldName="/Script/BackToBack.BTBPlayableCharacter.Camera",NewName="/Script/BackToBack.BTBPlayableCharacter.SceneCaptureCamera")
