Latest Update on ShootingUsingObjectPooling

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/BackToBack/Maps/TestPreCommit.TestPreCommit
+GameDefaultMap=/Game/BackToBack/Maps/MiniGames/Present/PresentBackToBack.PresentBackToBack
 GlobalDefaultGameMode=/Game/Developers/pc/Collections/AhmedSameh/Blueprints/BP_BTBGameplayGameMode.BP_BTBGameplayGameMode_C
 bUseSplitscreen=False
-EditorStartupMap=/Game/BackToBack/Maps/TestPreCommit.TestPreCommit
+EditorStartupMap=/Game/BackToBack/Maps/MiniGames/Present/PresentBackToBack.PresentBackToBack
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -79,7 +79,7 @@ r.Lumen.HardwareRayTracing=False
 r.Lumen.HardwareRayTracing.LightingMode=0
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 r.Lumen.TraceMeshSDFs=1
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.RayTracing=False
 r.RayTracing.Shadows=False
 r.RayTracing.Skylight=False
@@ -207,3 +207,5 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBPlayableCharacter.Camera",NewName="/Script/BackToBack.BTBPlayableCharacter.SceneCaptureCamera")
++FunctionRedirects=(OldName="/Script/BackToBack.BTBObjectPoolComponent.OnPooledObjDespawn",NewName="/Script/BackToBack.BTBObjectPoolComponent.OnPooledObjectDespawn")
+
