--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -209,3 +209,15 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBPlayableCharacter.Camera",NewName="/Script/BackToBack.BTBPlayableCharacter.SceneCaptureCamera")
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBObjectPoolComponent.OnPooledObjDespawn",NewName="/Script/BackToBack.BTBObjectPoolComponent.OnPooledObjectDespawn")
 
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=NavigationOnly
+HardwareCursors=()
+SoftwareCursors=((Default, "/Game/BackToBack/HUD/Testing_Assetes/DefaultCursor-1.DefaultCursor-1_C"),(GrabHand, "/Game/BackToBack/HUD/Testing_Assetes/Cursor-1.Cursor-1_C"))
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve=None)
+bAllowHighDPIInGameMode=False
+DesignScreenSize=(X=1920,Y=1080)
+bLoadWidgetsOnDedicatedServer=True
+
