Shooting from the gun directly

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -208,6 +208,7 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBPlayableCharacter.Camera",NewName="/Script/BackToBack.BTBPlayableCharacter.SceneCaptureCamera")
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBObjectPoolComponent.OnPooledObjDespawn",NewName="/Script/BackToBack.BTBObjectPoolComponent.OnPooledObjectDespawn")
++PropertyRedirects=(OldName="/Script/BackToBack.BTBGun.BulletPool",NewName="/Script/BackToBack.BTBGun.BulletPoolComponent")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
