--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/BackToBack/Maps/MiniGames/Present/PresentBackToBack.Present
 GlobalDefaultGameMode=/Game/Developers/pc/Collections/AhmedSameh/Blueprints/BP_BTBGameplayGameMode.BP_BTBGameplayGameMode_C
 bUseSplitscreen=False
 EditorStartupMap=/Game/BackToBack/Maps/MiniGames/Present/PresentBackToBack.PresentBackToBack
+bOffsetPlayerGamepadIds=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
