--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -210,6 +210,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBPlayableCharacter.Camera",NewName="/Script/BackToBack.BTBPlayableCharacter.SceneCaptureCamera")
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBObjectPoolComponent.OnPooledObjDespawn",NewName="/Script/BackToBack.BTBObjectPoolComponent.OnPooledObjectDespawn")
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBGun.BulletPool",NewName="/Script/BackToBack.BTBGun.BulletPoolComponent")
++PropertyRedirects=(OldName="/Script/BackToBack.BTBMiniGameThreeGameMode.Motorcycle",NewName="/Script/BackToBack.BTBMiniGameThreeGameMode.MotorcycleClass")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
