Fixed Mouse Cursor

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,3 +3,7 @@
 ProjectID=BC4F62814632E51AEC62CA83670C3150
 CopyrightNotice=Copyright di-tri studio, Inc. All Rights Reserved.
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+StagingDirectory=(Path="D:/Graduation Project In-House Assets/Build 1")
+
