--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Art/Level.Level
-GlobalDefaultGameMode=/Game/Developers/pc/Collections/AhmedSameh/Blueprints/BP_BTBGameplayGameMode.BP_BTBGameplayGameMode_C
-bUseSplitscreen=False
 EditorStartupMap=/Game/Art/Level.Level
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Art/Level.Level
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Developers/pc/Collections/AhmedSameh/Blueprints/BP_BTBGameplayGameMode.BP_BTBGameplayGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -39,7 +47,7 @@ SoundCueCookQualityIndex=-1
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Scalable
+DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.RendererSettings]
@@ -104,14 +112,14 @@ r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
-r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.MotionBlur=True
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=True
-r.AntiAliasingMethod=1
+r.AntiAliasingMethod=4
 r.MSAACount=4
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
