--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -219,6 +219,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBObjectPoolComponent.OnPooledObjDespawn",NewName="/Script/BackToBack.BTBObjectPoolComponent.OnPooledObjectDespawn")
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBGun.BulletPool",NewName="/Script/BackToBack.BTBGun.BulletPoolComponent")
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBMiniGameThreeGameMode.Motorcycle",NewName="/Script/BackToBack.BTBMiniGameThreeGameMode.MotorcycleClass")
++PropertyRedirects=(OldName="/Script/BackToBack.BTBGameHUD.GameScore",NewName="/Script/BackToBack.BTBGameHUD.Score")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
