--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -220,6 +220,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBGun.BulletPool",NewName="/Script/BackToBack.BTBGun.BulletPoolComponent")
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBMiniGameThreeGameMode.Motorcycle",NewName="/Script/BackToBack.BTBMiniGameThreeGameMode.MotorcycleClass")
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBGameHUD.GameScore",NewName="/Script/BackToBack.BTBGameHUD.Score")
++PropertyRedirects=(OldName="/Script/BackToBack.BTBCamera.CameraMoveSpeed",NewName="/Script/BackToBack.BTBCamera.CameraMovementSpeed")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
