Modified InputReceiver, added 4D Move Action for mini game two

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -221,6 +221,9 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBMiniGameThreeGameMode.Motorcycle",NewName="/Script/BackToBack.BTBMiniGameThreeGameMode.MotorcycleClass")
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBGameHUD.GameScore",NewName="/Script/BackToBack.BTBGameHUD.Score")
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBCamera.CameraMoveSpeed",NewName="/Script/BackToBack.BTBCamera.CameraMovementSpeed")
++FunctionRedirects=(OldName="/Script/BackToBack.BTBCharacter.GetRotationValue",NewName="/Script/BackToBack.BTBCharacter.GetPlayerInputValue_X")
++FunctionRedirects=(OldName="/Script/BackToBack.BTBCharacter.GetPlayerInputValue_X",NewName="/Script/BackToBack.BTBCharacter.GetUserInputValue_X")
++FunctionRedirects=(OldName="/Script/BackToBack.BTBCharacter.GetUserInputValue_X",NewName="/Script/BackToBack.BTBCharacter.GetUserInput_X")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
