--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -224,6 +224,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBCharacter.GetRotationValue",NewName="/Script/BackToBack.BTBCharacter.GetPlayerInputValue_X")
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBCharacter.GetPlayerInputValue_X",NewName="/Script/BackToBack.BTBCharacter.GetUserInputValue_X")
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBCharacter.GetUserInputValue_X",NewName="/Script/BackToBack.BTBCharacter.GetUserInput_X")
++FunctionRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.Damage",NewName="/Script/BackToBack.BTBEnemyCharacter.GetDamaged")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
