Current state of enemy death

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -225,6 +225,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBCharacter.GetPlayerInputValue_X",NewName="/Script/BackToBack.BTBCharacter.GetUserInputValue_X")
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBCharacter.GetUserInputValue_X",NewName="/Script/BackToBack.BTBCharacter.GetUserInput_X")
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.Damage",NewName="/Script/BackToBack.BTBEnemyCharacter.GetDamaged")
++PropertyRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.sound",NewName="/Script/BackToBack.BTBEnemyCharacter.DeathSound")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
