Added HP Bar for enemies

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -226,6 +226,9 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBCharacter.GetUserInputValue_X",NewName="/Script/BackToBack.BTBCharacter.GetUserInput_X")
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.Damage",NewName="/Script/BackToBack.BTBEnemyCharacter.GetDamaged")
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.sound",NewName="/Script/BackToBack.BTBEnemyCharacter.DeathSound")
++PropertyRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.HealthWidgetComponent",NewName="/Script/BackToBack.BTBEnemyCharacter.HealthWidgetComp")
++FunctionRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.GetHealthPercentageForUIHPProgressBar",NewName="/Script/BackToBack.BTBEnemyCharacter.GetHealthPercentageForUI")
++FunctionRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.GetHealthPercentageForUI",NewName="/Script/BackToBack.BTBEnemyCharacter.CalculateHealthPercentage")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
