Added spear path spline code

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -229,6 +229,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.HealthWidgetComponent",NewName="/Script/BackToBack.BTBEnemyCharacter.HealthWidgetComp")
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.GetHealthPercentageForUIHPProgressBar",NewName="/Script/BackToBack.BTBEnemyCharacter.GetHealthPercentageForUI")
 +FunctionRedirects=(OldName="/Script/BackToBack.BTBEnemyCharacter.GetHealthPercentageForUI",NewName="/Script/BackToBack.BTBEnemyCharacter.CalculateHealthPercentage")
++PropertyRedirects=(OldName="/Script/BackToBack.BTBMiniGameTwoPlayableCharacter.ArcEndSphere",NewName="/Script/BackToBack.BTBMiniGameTwoPlayableCharacter.SplineEndSphere")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
