--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -95,7 +95,7 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="MainMenu2")
-+MapsToCook=(FilePath="MiniGameOneLevel")
++MapsToCook=(FilePath="LevelGameOne")
 +MapsToCook=(FilePath="MiniGameTwo_Level")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
