New Minigame one level

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -95,8 +95,8 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="MainMenu2")
-+MapsToCook=(FilePath="LevelGameOne")
 +MapsToCook=(FilePath="MiniGameTwo_Level")
++MapsToCook=(FilePath="MiniGameOneNew")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
